# Fire-Scout

./: .gitignore  README.md  conftest.py  run_tests_ros.sh
src/bringup/: package.xml  setup.py
src/bringup/config/: firescout_viz.rviz  namespace_map.yaml
src/bringup/launch/: full_system.launch.py  global_stack.launch.py  robot_stack.launch.py
src/bringup/test/: test_full_launch_smoke.py  test_namespace_isolation.py
src/common_utils/: package.xml  setup.py
src/common_utils/common_utils/: __init__.py  geometry_utils.py  namespace_utils.py  qos_profiles.py
src/common_utils/config/: defaults.yaml
src/common_utils/launch/: .placeholder
src/common_utils/test/: test_geometry_utils.py  test_math_utils.py  test_namespace_utils.py
src/coordination/: package.xml  setup.py
src/coordination/config/: allocator.yaml  fault_policy.yaml  mission_policy.yaml
src/coordination/coordination/: fault_supervisor.py  health_node.py  heartbeat_monitor.py  mission_node.py  task_allocator.py
src/coordination/launch/: health_global.launch.py  mission_global.launch.py
src/coordination/test/: test_fault_reassignment.py  test_heartbeat_timeout.py  test_task_allocation.py
src/exploration/: README.md  package.xml  setup.cfg  setup.py
src/exploration/config/: auction.yaml  frontier.yaml
src/exploration/exploration/: __init__.py  auction_logic.py  auction_node.py  auction_orchestrator.py  auctioneer_node.py  bidder_logic.py  bidder_node.py  frontier_detector.py  frontier_detector_node.py  frontier_logic.py  frontier_node.py
src/exploration/launch/: auction_global.launch.py  frontier_robot.launch.py
src/exploration/test/: test_auction_single_winner.py  test_bid_timeout.py  test_frontier_output.py
src/firescout_interfaces/: CMakeLists.txt  package.xml
src/firescout_interfaces/action/: RescueHuman.action  SuppressFire.action
src/firescout_interfaces/config/: interface_contract.yaml
src/firescout_interfaces/launch/: .placeholder
src/firescout_interfaces/msg/: AuctionAnnouncement.msg  AuctionBid.msg  AuctionResult.msg  FaultEvent.msg  FireDetection.msg  Frontier.msg  FrontierArray.msg  HumanDetection.msg  Incident.msg  MapMergeStatus.msg  MissionState.msg  NodeStatus.msg  ReferenceTrajectory.msg  RobotHealth.msg  SensorData.msg  TaskAssignment.msg
src/firescout_interfaces/srv/: AckTask.srv  AssignTask.srv  GetRobotState.srv  ReportFault.srv  RequestAssistance.srv  ResolveIncident.srv  SetMapMergeEnabled.srv  SetRobotMode.srv  StartMapping.srv  StopMapping.srv
src/firescout_interfaces/test/: test_action_generation.py  test_msg_generation.py  test_srv_generation.py
src/mapping/: package.xml  setup.cfg  setup.py
src/mapping/config/: map_merge.yaml  slam_toolbox_robot.yaml  tf_policy.yaml
src/mapping/launch/: map_merge.launch.py  slam_robot.launch.py
src/mapping/mapping/: map_merge_node.py  map_merge_status_node.py  map_merger.py  slam_runner.py  slam_status_node.py  slam_wrapper_node.py  tf_consistency.py
src/mapping/test/: test_map_merge_output.py  test_slam_topics.py  test_tf_consistency.py
src/monitoring/: package.xml  setup.cfg  setup.py
src/monitoring/config/: monitor_topics.yaml  thresholds.yaml
src/monitoring/launch/: monitoring.launch.py
src/monitoring/monitoring/: latency_monitor_node.py  latency_monitor_ros_node.py  metrics_exporter_node.py  metrics_exporter_ros_node.py  topic_rate_monitor_node.py  topic_rate_monitor_ros_node.py
src/monitoring/test/: test_latency_alarm.py  test_topic_rate_alarm.py
src/response/: package.xml  setup.cfg  setup.py
src/response/config/: fire_detection.yaml  human_detection.yaml  prioritization.yaml
src/response/launch/: detection_robot.launch.py  incident_global.launch.py
src/response/response/: detection_pipeline_node.py  detection_processor.py  fire_detection_node.py  incident_manager.py  incident_queue_node.py
src/response/test/: test_fire_detection_pipeline.py  test_human_detection_pipeline.py  test_incident_priority.py  test_smoke_unittest.py
src/simulation/: CMakeLists.txt  package.xml
src/simulation/config/: bridge_topics_robot.yaml  robot_spawn_poses.yaml  sim_physics.yaml
src/simulation/launch/: .placeholder  bridge_robot.launch.py  gazebo_ionic.launch.py  gz_world.launch.py  sim.launch.py  spawn_robot.launch.py  spawn_tb3.launch.py
src/simulation/models/: .placeholder  model.config  model.sdf
src/simulation/test/: test_bridge_topics.py  test_clock_available.py  test_spawn_namespaces.py
src/simulation/worlds/: .placeholder  firescout_env.world  world_1.sdf
src/testing_tools/: package.xml  setup.py
src/testing_tools/config/: dummy_rates.yaml  fault_scenarios.yaml
src/testing_tools/launch/: integration_dummy_stack.launch.py  robot_dummy_stack.launch.py
src/testing_tools/test/: test_dummy_interfaces.py
src/testing_tools/testing_tools/: camera_pub_node.py  dummy_camera_pub.py  dummy_fault_injector.py  dummy_frontier_pub.py  dummy_heartbeat_pub.py  dummy_odom_pub.py  dummy_scan_pub.py  heartbeat_pub_node.py  namespace_lint_node.py  odom_pub_node.py  scan_pub_node.py
team/: MEMBER_1_INTERFACES.md  MEMBER_2_SIMULATION.md  MEMBER_3_SLAM.md  MEMBER_4_NAVIGATION.md  MEMBER_5_SENSORS.md  MEMBER_6_BRINGUP.md  TEAM_COORDINATION.md
