<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bringup</name>
  <version>0.0.0</version>
  <description>Launch and configuration files for Fire-Scout</description>
  <maintainer email="your.email@domain.com">Fire-Scout Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>firescout_interfaces</depend>
  <depend>slam_toolbox</depend>
  <depend>nav2_core</depend>
  <depend>rclpy</depend>
  <exec_depend>ros2launch</exec_depend>
</package>
