<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>coordination</name>
  <version>0.0.0</version>
  <description>Mission coordination and fault-tolerance package skeleton.</description>
  <maintainer email="your.email@domain.com">Fire-Scout Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>firescout_interfaces</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>ros2launch</exec_depend>
</package>
